--- a/IntegralSolver/IntegralSolver.csproj
+++ b/IntegralSolver/IntegralSolver.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CoreCLR-NCalc" Version="3.1.246" />
+  </ItemGroup>
+
 </Project>
